Fix dropdown on mobile

--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@ a:hover,
         border: 0;
         padding: 0;
         box-shadow: none;
+        display: none;
     }
 
     .hero-section {
